[gh-396] Corrected spacing in Inspect.Heap and Inspect.Stack tables.

--- a/source/WebApp/less/imports/output.less
+++ b/source/WebApp/less/imports/output.less
@@ -85,6 +85,10 @@
         margin-left: 20px;
     }
 
+    table {
+        border-collapse: collapse;
+    }
+
     tr + tr {
         border-top: 1px solid var(--inspection-border-color);
     }
